fixed scrolling on mobile pt2

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -24,4 +24,5 @@ body {
   background-color: rgba(225, 225, 225, 0.452);
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
